Fixes header alignment

--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -82,12 +82,12 @@ a:hover {
 
 #header {
   height: auto;
+  position: relative;
 }
 
 #header * {
   display: inline-block;
   font-family: 'Patua One';
-  line-height: 65px;
 }
 
 #header h1 a,
@@ -99,8 +99,12 @@ a:hover {
 }
 
 #header ul {
-  float: right;
   font-size: 18px;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  margin-top: -9px;
+  height: 18px;
 }
 #header li {
   margin-left: 10px;
